asset/img-chalila.png

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <a href="#home">Home<a>
             <a href="#about">About<a>
-            <a href="#services">Service<a>
+            <a href="#certificate">Certificate<a>
             <a href="#portfolio">Portfolio<a>
             <a href="#contact">Contacts<a>
         </nav>
@@ -53,7 +53,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="assets/img-chalila-fixed.png" alt="myself">
+            <img src="assets/img-chalila.png" alt="myself">
         </div>
 
         <div class="about-content">
@@ -92,7 +92,7 @@
 
     <!-- certificate -->
 
-    <section class="certificate">
+    <section class="certificate" id="certificate">
         <h2>Certificate</h2>
         <div class="wrapper">
             <div class="container">
